--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -1,9 +1,9 @@
 name: Run Python Script
 on:
-  workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
+  #workflow_dispatch:
+  push:
+     branches:
+       - main
 
 jobs:
    run-python-script:
