--- a/.github/workflows/bash.yaml
+++ b/.github/workflows/bash.yaml
@@ -32,3 +32,14 @@ jobs:
           run: |
             echo ${{ secrets.REMOTE_HOST}}
             echo ${{ secrets.SSH_PRIVATE_KEY}}
+
+        - name: ssh 
+          uses: appleboy/ssh-action@master
+          with:
+           host: ${{ secrets.REMOTE_HOST }}
+           username: ${{ secrets.REMOTE_USER }}
+           key: ${{ secrets.SSH_PRIVATE_KEY }}
+           script: |
+             docker ps
+             docker run hello-world
+             hostname
