--- a/.github/workflows/bash.yaml
+++ b/.github/workflows/bash.yaml
@@ -28,6 +28,15 @@ jobs:
           run: | 
              hostname -f
              hostname -I
+
+        - name: deploy to aws
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ secrets.REMOTE_HOST }}
+            username: ${{ secrets.REMOTE_USER }}
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            source: "./"
+            target: "/tmp"
         - name: ssh 
           uses: appleboy/ssh-action@master
           with:
@@ -35,6 +44,6 @@ jobs:
            username: ${{ secrets.REMOTE_USER }}
            key: ${{ secrets.SSH_PRIVATE_KEY }}
            script: |
+             cd /tmp/gh_actions/animal-search/
+             docker-compose up -d 
              docker ps
-             docker run hello-world
-             hostname
