--- a/.github/workflows/bash.yaml
+++ b/.github/workflows/bash.yaml
@@ -36,7 +36,7 @@ jobs:
             username: ${{ secrets.REMOTE_USER }}
             key: ${{ secrets.SSH_PRIVATE_KEY }}
             source: "./"
-            target: "/tmp"
+            target: "~/deploy"
         - name: ssh 
           uses: appleboy/ssh-action@master
           with:
@@ -44,6 +44,7 @@ jobs:
            username: ${{ secrets.REMOTE_USER }}
            key: ${{ secrets.SSH_PRIVATE_KEY }}
            script: |
-             cd /tmp/gh_actions/animal-search/
+             ls ~/deploy
+             cd ~/deploy/gh_actions/animal-search/
              docker-compose up -d 
              docker ps
