update to use new runner

--- a/.github/workflows/website-deploy.yaml
+++ b/.github/workflows/website-deploy.yaml
@@ -6,7 +6,7 @@ on:
        - main
 jobs:
     run-Deploy-script:
-      runs-on: ubuntu-latest
+      runs-on: self-hosted
       steps:
         - name: Checkout code
           uses: actions/checkout@v4
