--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
    run-python-script:
-     runs-on: ubuntu-latest
+     runs-on: self-hosted
      steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
