--- a/.github/workflows/website-deploy.yaml
+++ b/.github/workflows/website-deploy.yaml
@@ -1,9 +1,9 @@
 name: Website Deploy
 on:
- # workflow_dispatch:
-   push:
-     branches:
-       - main
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
 jobs:
     run-Deploy-script:
       runs-on: self-hosted
