--- a/.github/workflows/website-deploy.yaml
+++ b/.github/workflows/website-deploy.yaml
@@ -6,7 +6,7 @@ on:
   #     - main
 jobs:
     run-Deploy-script:
-      runs-on: self-hosted
+      runs-on: ubuntu latest
       steps:
         - name: Checkout code
           uses: actions/checkout@v4
