--- a/.github/workflows/website-deploy.yaml
+++ b/.github/workflows/website-deploy.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 jobs:
     run-Deploy-script:
-      runs-on: ubuntu latest
+      runs-on: ubuntu-latest
       steps:
         - name: Checkout code
           uses: actions/checkout@v4
